semgrep/tests/e2e/snapshots/test_exclude_include/test_exclude_include/exclude-and-exclude1/err.out
Traceback (most recent call last):
  File "/usr/lib/python3.8/runpy.py", line 194, in _run_module_as_main
    return _run_code(code, main_globals, None,
  File "/usr/lib/python3.8/runpy.py", line 87, in _run_code
    exec(code, run_globals)
  File "/home/runner/work/semgrep/semgrep/semgrep/semgrep/__main__.py", line 5, in <module>
    from semgrep.cli import cli
  File "/home/runner/work/semgrep/semgrep/semgrep/semgrep/cli.py", line 4, in <module>
    from semgrep.commands.ci import ci
  File "/home/runner/work/semgrep/semgrep/semgrep/semgrep/commands/ci.py", line 11, in <module>
    from semgrep.commands.scan import CONTEXT_SETTINGS
  File "/home/runner/work/semgrep/semgrep/semgrep/semgrep/commands/scan.py", line 488
    optgroup.option(
    ^
SyntaxError: invalid syntax
